fix: set offscreen content to hidden

--- a/lesson2-focus/04-offscreen-content/blog.css
+++ b/lesson2-focus/04-offscreen-content/blog.css
@@ -172,3 +172,9 @@ h6, .h6 {
   display: block;
   left: 9999px;
 }
+
+
+.close {
+  display: none;
+  visibility: hidden;
+}
